# VideoImageResizer

./: VideoImageResizer.sln  wrap_smart_ptr.cpp
VideoImageResizer/: CMakeLists.txt  README.txt  VideoImageResizer.vcxproj  defines.h  filelogger.cpp  filelogger.h  main.cpp  threadpool.cpp  threadpool.h  videocapture_factory.cpp  videocapture_opencv.cpp  videocapture_opencv.h  videocaptureinterface.cpp  videocaptureinterface.h  videoimageshandler.cpp  videoimageshandler.h  videoimgresizer  videovapture_opencv.cpp  videovapture_opencv.h
